--- a/selenium-nunit-azure/packages.config
+++ b/selenium-nunit-azure/packages.config
@@ -4,6 +4,6 @@
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net45" />
   <package id="NUnit" version="3.11.0" targetFramework="net45" />
   <package id="NUnit3TestAdapter" version="3.12.0" targetFramework="net45" />
-  <package id="Selenium.Chrome.WebDriver" version="2.45" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net45" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.41.0" targetFramework="net45" />
 </packages>
